--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin:48px auto;
+    margin:48px auto 28px;
 }
 img{
     border-radius: 16px;
@@ -55,4 +55,14 @@ h1, h2{
 }
 ul{
     padding-left: 25px;
+}
+footer{
+    text-align: center;
+    font-size: 16px;
+    color: #573A37;
+   padding-bottom: 48px;
+}
+footer img{
+    vertical-align: middle;
+    width: 20px;
 }
